--- a/ami-perbo/index.html
+++ b/ami-perbo/index.html
@@ -6,6 +6,6 @@
     <title>Ami perbo akdin na akdin</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea temporibus at ad neque voluptatibus. Ad consequuntur quos inventore officia molestiae.</p>
 </body>
 </html>
